<resources>
    <string name="app_name">TODOAndroid</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="create_account">create_account</string>
    <string name="remember_me">remember_me</string>
    <string name="sign_in">sign_in</string>
    <string name="todo">Todo</string>
</resources>